@@ -47,6 +47,9 @@ RELEASE NOTES
     open/3-4 built-in predicate are not always relative to the current
     working directory.
 
+    Improved Logtalk runtime error handler when using SWI-Prolog as the
+    back-end compiler.
+
     Updated the ECLiPSe, SICStus Prolog, SWI-Prolog, and YAP config files
     in order to detect discontiguous predicate clause warnings and update
     the Logtalk warnings counter accordingly.
